--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,134 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:orientation="vertical">
     <GridLayout
-        android:id="@+id/mygrid"
+        android:id = "@+id/myGrid"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:columnCount="3"
-        android:rowCount="3">
-
+        android:layout_height="@dimen/hh"
+        android:columnCount="9"
+        android:rowCount="9">
     </GridLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp">
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="1"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="2"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="3"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="4"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="5"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="6"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="7"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="8"
+            android:textSize="32dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="32dp"
+            android:layout_height="60dp"
+            android:onClick="onClickButton"
+            android:text="9"
+            android:textSize="32dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp">
+        <Button
+            android:id="@+id/resetBT"
+            android:layout_width="32dp"
+            android:layout_weight="1"
+            android:layout_height="60dp"
+            android:text="reset"
+            android:textColor="#121212"
+            android:textSize="18dp"/>
+        <Button
+            android:id="@+id/solveBT"
+            android:layout_width="32dp"
+            android:layout_weight="1"
+            android:layout_height="60dp"
+            android:text="solve"
+            android:textColor="#121212"
+            android:textSize="18dp"/>
+
+
+
+
+    </LinearLayout>
+
 </LinearLayout>
 
 
