--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,16 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="textViewStyle">
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_rowWeight">1</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:background">@drawable/textview_line_strock</item>
+        <item name="android:onClick">onClickText</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
