--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="8dp"
     android:orientation="vertical">
     <GridLayout
         android:id = "@+id/myGrid"
@@ -15,13 +15,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_height="64dp"
+        android:padding="8dp"
+        android:layout_margin="8dp">
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
-            android:text="1"
-            android:textSize="32dp"/>
+            android:onClick="onClickNumber"
+            android:text="@string/one"
+            android:gravity="center"
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -29,9 +32,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:onClick="onClickNumber"
+            android:gravity="center"
             android:text="2"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -39,9 +43,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="3"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -49,9 +54,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="4"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -59,9 +65,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="5"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -69,9 +76,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="6"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -79,9 +87,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="7"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -89,9 +98,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="8"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -99,9 +109,10 @@
         <TextView
             android:layout_width="32dp"
             android:layout_height="60dp"
-            android:onClick="onClickButton"
+            android:gravity="center"
+            android:onClick="onClickNumber"
             android:text="9"
-            android:textSize="32dp"/>
+            android:textSize="40dp"/>
 
     </LinearLayout>
 
