add color to button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#121212</color>
     <color name="white">#FAFAFA</color>
+    <color name="blue">#612D56A7</color>
 </resources>
