--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <GridLayout
         android:id = "@+id/myGrid"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/hh"
+        android:layout_height="480dp"
         android:columnCount="9"
         android:rowCount="9">
     </GridLayout>
@@ -20,117 +20,130 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:padding="8dp"
-        android:layout_margin="8dp"
-        android:layout_gravity="bottom">
+        android:layout_height="wrap_content">
+
         <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="onClickNumber"
+            android:text="6"
+            android:gravity="center"
+            android:background="@drawable/number_style"
+            android:textSize="40dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="onClickNumber"
+            android:text="7"
+            android:gravity="center"
+            android:background="@drawable/number_style"
+            android:textSize="40dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="onClickNumber"
+            android:text="8"
+            android:gravity="center"
+            android:background="@drawable/number_style"
+            android:textSize="40dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="onClickNumber"
+            android:text="9"
+            android:gravity="center"
+            android:background="@drawable/number_style"
+            android:textSize="40dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="onClickNumber"
+            android:text="x"
+            android:gravity="center"
+            android:background="@drawable/number_style"
+            android:textSize="40dp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:onClick="onClickNumber"
             android:text="@string/one"
             android:gravity="center"
+            android:background="@drawable/number_style"
             android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:onClick="onClickNumber"
-            android:gravity="center"
             android:text="2"
+            android:gravity="center"
+            android:background="@drawable/number_style"
             android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:onClick="onClickNumber"
             android:text="3"
+            android:gravity="center"
+            android:background="@drawable/number_style"
             android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:onClick="onClickNumber"
             android:text="4"
+            android:gravity="center"
+            android:background="@drawable/number_style"
             android:textSize="40dp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:onClick="onClickNumber"
             android:text="5"
+            android:gravity="center|top"
+            android:background="@drawable/number_style"
             android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:onClick="onClickNumber"
-            android:text="6"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:onClick="onClickNumber"
-            android:text="7"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:onClick="onClickNumber"
-            android:text="8"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:onClick="onClickNumber"
-            android:text="9"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="32dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:onClick="onClickNumber"
-            android:text="x"
-            android:textSize="40dp"/>
-
     </LinearLayout>
 
     <View
@@ -142,11 +155,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_gravity="bottom"
-        android:layout_margin="16dp">
+        android:layout_gravity="bottom">
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/resetBT"
-            android:layout_width="24dp"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
             android:text="reset"
@@ -158,7 +170,7 @@
             android:layout_height="0dp"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/solveBT"
-            android:layout_width="24dp"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
             android:text="solve"
