--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,181 +2,163 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
+
     <GridLayout
-        android:id = "@+id/myGrid"
+        android:id="@+id/myGrid"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
+        android:layout_height="0dp"
+        android:layout_weight="8"
         android:columnCount="9"
-        android:rowCount="9">
-    </GridLayout>
+        android:rowCount="9"></GridLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-
+        android:layout_weight="1"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="8dp">
 
         <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="6"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/six" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="7"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="8"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="9"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="x"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:layout_weight="1" />
 
         <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="@string/one"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/siven" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="2"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/eight" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="3"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/nine" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="4"
-            android:gravity="center"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="onClickNumber"
-            android:text="5"
-            android:gravity="center|top"
-            android:background="@drawable/number_style"
-            android:textSize="40dp"/>
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/buttonDel" />
     </LinearLayout>
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/one" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/tow" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/three" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/four" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="@dimen/sizeNumberButton"
+            android:layout_height="@dimen/sizeNumberButton"
+            style="@style/numberStyle"
+            android:text="@string/five" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_gravity="bottom">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="bottom">
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/resetBT"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="60dp"
-            android:text="reset"
+            android:layout_width="@dimen/buttonWidthSize"
+            android:layout_height="@dimen/buttonHeightSize"
             android:background="@drawable/button_style"
-            android:textColor="#121212"
-            android:textSize="18dp"/>
+            android:text="@string/name_button_reset"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
         <View
-            android:layout_width="16dp"
-            android:layout_height="0dp"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/solveBT"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="60dp"
-            android:text="solve"
+            android:layout_width="@dimen/buttonWidthSize"
+            android:layout_height="@dimen/buttonHeightSize"
             android:background="@drawable/button_style"
-            android:textColor="#121212"
-            android:textSize="18dp"/>
+            android:text="@string/name_button_solve"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </LinearLayout>
