--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,13 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="numberStyle" >
+        <item name="android:onClick">onClickNumber</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/number_style</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
     <style name="textViewStyle">
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_width">0dp</item>
