add alot of new feuture

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="brown">#61A9AFBD</color>
     <color name="blue">#612D56A7</color>
     <color name="Grean">#1645D1</color>
+    <color name="red" >#DEBF0F0F</color>
 </resources>
